fixed the H1 visibility

--- a/src/style.css
+++ b/src/style.css
@@ -62,6 +62,7 @@ a {
 .ai-generator-title {
   font-size: 55px;
   max-width: 100%;
+  -webkit-text-stroke: #799c58 0.1px;
 }
 .generator {
   text-align: center;
